--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -65,6 +65,13 @@
       margin-top: 10px;
       color: #555;
     }
+    .profile-img {
+      width: 150px;
+      height: 150px;
+      object-fit: cover;
+      border-radius: 50%;
+      margin-bottom: 20px;
+    }
     footer {
       background: #212529;
       color: #ced4da;
@@ -102,9 +109,10 @@
     </div>
   </section>
 
-  <!-- Introduction Section -->
+  <!-- Introduction Section with Image -->
   <section class="introduction">
     <div class="container">
+      <img src="assets/dheerajpic.jpg" alt="Dheeraj Mali" class="profile-img">
       <h2>About Me</h2>
       <p>Hello, I am Dheeraj Mali, a passionate software tester with a keen interest in automation and Java development. With experience in software testing and automation tools, I am always looking to solve complex problems through coding and innovation. My goal is to enhance my skills, contribute to impactful projects, and continue learning in the ever-evolving tech world.</p>
       <a href="/assets/Dheeraj_Mali_CV.pdf" download="Dheeraj_Mali_CV.pdf" class="btn btn-primary">Download CV</a>
